--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -4,7 +4,93 @@
         </div>
         <div class="row">
                 <div class="col-md-1"></div>
-                <div class="col"></div>
-                <div class="col-md-4" id="perso"></div>
+                <div class="col">
+                        <div class="container">
+                                <ul class="timeline">
+                                        <li>
+                                                <div class="timeline-badge">
+                                                </div>
+                                                <div class="timeline-panel">
+                                                        <div class="timeline-heading">
+                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                                                                <p><small class="text-muted"><i
+                                                                                        class="glyphicon glyphicon-time"></i>
+                                                                                11 hours ago via Twitter</small></p>
+                                                        </div>
+                                                        <div class="timeline-body">
+                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
+                                                                        adipiscings elitis. Pra lá , depois divoltis
+                                                                        porris, paradis. Paisis, filhis, espiritis
+                                                                        santis. Mé faiz elementum girarzis, nisi eros
+                                                                        vermeio, in elementis mé pra quem é amistosis
+                                                                        quis leo. Manduma pindureta quium dia nois paga.
+                                                                        Sapien in monti palavris qui num significa nadis
+                                                                        i pareci latim. Interessantiss quisso pudia ce
+                                                                        receita de bolis, mais bolis eu num gostis.</p>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li class="timeline-inverted">
+                                                <div class="timeline-badge warning"></div>
+                                                <div class="timeline-panel">
+                                                        <div class="timeline-heading">
+                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                                                        </div>
+                                                        <div class="timeline-body">
+                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
+                                                                        adipiscings elitis. Pra lá , depois divoltis
+                                                                        porris, paradis. Paisis, filhis, espiritis
+                                                                        santis. Mé faiz elementum girarzis, nisi eros
+                                                                        vermeio, in elementis mé pra quem é amistosis
+                                                                        quis leo. Manduma pindureta quium dia nois paga.
+                                                                        Sapien in monti palavris qui num significa nadis
+                                                                        i pareci latim. Interessantiss quisso pudia ce
+                                                                        receita de bolis, mais bolis eu num gostis.</p>
+                                                                
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="timeline-badge danger"></div>
+                                                <div class="timeline-panel">
+                                                        <div class="timeline-heading">
+                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                                                        </div>
+                                                        <div class="timeline-body">
+                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
+                                                                        adipiscings elitis. Pra lá , depois divoltis
+                                                                        porris, paradis. Paisis, filhis, espiritis
+                                                                        santis. Mé faiz elementum girarzis, nisi eros
+                                                                        vermeio, in elementis mé pra quem é amistosis
+                                                                        quis leo. Manduma pindureta quium dia nois paga.
+                                                                        Sapien in monti palavris qui num significa nadis
+                                                                        i pareci latim. Interessantiss quisso pudia ce
+                                                                        receita de bolis, mais bolis eu num gostis.</p>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li class="timeline-inverted">
+                                                <div class="timeline-panel">
+                                                        <div class="timeline-heading">
+                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                                                        </div>
+                                                        <div class="timeline-body">
+                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
+                                                                        adipiscings elitis. Pra lá , depois divoltis
+                                                                        porris, paradis. Paisis, filhis, espiritis
+                                                                        santis. Mé faiz elementum girarzis, nisi eros
+                                                                        vermeio, in elementis mé pra quem é amistosis
+                                                                        quis leo. Manduma pindureta quium dia nois paga.
+                                                                        Sapien in monti palavris qui num significa nadis
+                                                                        i pareci latim. Interessantiss quisso pudia ce
+                                                                        receita de bolis, mais bolis eu num gostis.</p>
+                                                        </div>
+                                                </div>
+                                        </li>
+
+                                </ul>
+                        </div>
+                </div>
+                <div class="col-md-3" id="perso"><img id="perso1" src="../../assets/images/perso-formation.png"></div>
         </div>
 </section>
