--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,7 +13,7 @@ section{
     width:70%;
     height: 22%;
     border-radius: 10px;
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,0.55);
     transition: all .3s ease-in-out;
     margin: 2% 2% 3% 2%;   
     padding:0; 
@@ -57,6 +57,7 @@ h1{
     font-size:2vw;
     margin-top:12px;
     margin-bottom:12px;
+    text-shadow: 2px 2px 2px black;
 }
 p{
     color: #FFF;
@@ -101,7 +102,7 @@ p{
         font-size:5vw;
     }
     p{
-        font-size:3.5vw;
+        font-size:4vw;
     }
     .empty-col{
         display:none;
@@ -110,7 +111,7 @@ p{
 
 .container:hover{
     transform: scale(1.05);
-    background-color:rgba(0,0,0,0.6);
+    background-color:rgba(0,0,0,0.65);
 }
 
 
