--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,6 @@
 
 .nav{
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,0.55);
     display: flex;
     justify-content: center;
     min-height: 60px;
@@ -23,6 +23,7 @@
     font-family: comfortaa;
     font-size: 1.5vw;
     color: #FFF;
+    text-shadow: 2px 2px 2px black;
 }
 
 
@@ -41,10 +42,11 @@
     font-family: comfortaa;
     font-size: 3vh;
     color: #FFF;
+    text-shadow: 2px 2px 2px black;
 }
 
 .navbar{
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,0.55);
 }
 
 .navbar .navbar-toggler-icon {
