--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -20,6 +20,7 @@ margin-top: 6vh;
     padding:0;
     margin:0;
     margin-top:5vh;
+    margin-right: 17px;
     height: 80vh;
     overflow: hidden;
     max-width: none;
@@ -28,8 +29,8 @@ margin-top: 6vh;
  section#timeline {
     height:100%;
     width: 100%;
-    margin-left:17px;
     padding:10px;
+    margin-left: 17px;
     position: relative;
     overflow-y:scroll;
     /*background-image: url('../../assets/images/perso-formation.png');
