--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -20,7 +20,6 @@ margin-top: 6vh;
     padding:0;
     margin:0;
     margin-top:5vh;
-    margin-right: 17px;
     height: 80vh;
     overflow: hidden;
     max-width: none;
@@ -31,6 +30,7 @@ margin-top: 6vh;
     width: 100%;
     padding:10px;
     margin-left: 17px;
+    padding-right: 34px;
     position: relative;
     overflow-y:scroll;
     /*background-image: url('../../assets/images/perso-formation.png');
