--- a/src/app/competence/competence.component.scss
+++ b/src/app/competence/competence.component.scss
@@ -6,3 +6,27 @@ section{
     background-size: cover;
     z-index: 1;
 }
+
+.container{
+    padding:20px;
+    margin-top:5vh;
+}
+
+h1{
+    font-size: 2.4vw;
+    text-align: center;
+    font-family: comfortaa;
+}
+
+.title{
+    padding-bottom: 10px;
+    border-bottom: 2px solid black;
+}
+
+.content{
+    height:60vh;
+    width:100%;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.5);
+    margin-top: 15px;
+}
